Fix text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,9 @@ code {
 
 .plane-details {
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
+  justify-content: center;
 }
 
 .plane-details-image {
@@ -44,10 +46,6 @@ code {
   background-color: #E1E2E4;
 }
 
-.plane-table div:nth-child(n) {
-  padding: 10px;
-}
-
 .center {
   display: block;
   margin-left: auto;
@@ -55,17 +53,50 @@ code {
   width: 75%;
 }
 
+p {
+  margin: auto 0;
+}
+
+.deet {
+  display: flex;
+  justify-content: space-between;
+  /* align-self: center; */
+  align-items: center;
+  height: 100%;
+}
+
+.plane-table div:nth-child(n) {
+  padding: 10px;
+}
+
 .reserve-button {
   background-color: #97bf0f;
   border: none;
   color: white;
   padding: 12px 24px;
-  /* text-align: center; */
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
   font-weight: 600;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 100px;
+}
+
+@media screen and (min-width: 768px) {
+  .plane-details {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .plane-details-image {
+    min-width: 55vw;
+    margin: 1rem;
+    padding: 1rem;
+    max-width: 70vw;
+  }
+
+  .plane-right {
+    margin: 1rem;
+    padding: 1rem;
+  }
 }
